[package]
name = "Spork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
roxmltree = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
urlencoding = "2.1.2"
pancurses = "0.17.0"
phf = { version = "0.11", default-features = false, features = ["macros"]}
ctrlc = "3.2.3"
iced = "0.4"
